<resources>
    <string name="app_name">FuriousLadle</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="slogan">might to bite</string>
    <string name="label_plzlogin">Please Login</string>
    <string name="label_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_cancel">Cancel</string>
    <string name="details">View More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>