<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appbar"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_slogan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/dp16"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/sp28"
        android:paddingBottom="@dimen/dp32"
        android:text="@string/label_plzlogin"
        android:textColor="@color/buttons"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_usr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/hint_username"
        app:layout_constraintTop_toBottomOf="@id/txt_slogan"
        app:layout_constraintBottom_toTopOf="@id/edit_pass"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp32"
            android:layout_marginRight="@dimen/dp32"
            android:layout_height="match_parent"
            />

    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:passwordToggleEnabled = "true"
        app:layout_constraintTop_toBottomOf="@id/edit_usr"
        android:id="@+id/edit_pass"
        app:layout_constraintRight_toRightOf="parent"

       >

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/password_input"
           android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"

        android:paddingTop="@dimen/dp32"
        android:layout_marginLeft="@dimen/dp32"
        android:layout_marginRight="@dimen/dp32"
        android:textColor="@color/text"
        android:textStyle="normal"
        android:lineSpacingExtra="7sp"

        />
       </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp32"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginRight="@dimen/dp32"
        android:backgroundTint="@color/buttons"
        android:text="@string/label_login"
        android:textColor="@color/text"
        app:layout_constraintLeft_toLeftOf="@id/edit_pass"
        app:layout_constraintRight_toLeftOf="@id/btn_cancel"


        app:layout_constraintTop_toBottomOf="@id/edit_pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttons"
        app:layout_constraintTop_toBottomOf="@id/edit_pass"
        app:layout_constraintLeft_toRightOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="@id/edit_pass"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginLeft="@dimen/dp32"
        android:layout_marginRight="@dimen/dp32"
        android:text="@string/label_cancel"
        android:textColor="@color/text"

        />




</androidx.constraintlayout.widget.ConstraintLayout>